[project]
name = "easyrunner-docs"
version = "0.1.0"
description = "EasyRunner Docs"
authors = [
    {name = "Janaka A",email = "contact@janaka.co.uk"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs-material (>=9.6.17,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
