[project]
name = "easyrunner-docs"
version = "0.1.0"
description = "EasyRunner Docs"
authors = [
    {name = "Janaka A",email = "contact@janaka.co.uk"}
]
readme = "README.md"
requires-python = ">=3.13"

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
mkdocs-material = {version = ">=9.6.19", extras = ["imaging"]}

[tool.poetry.group.dev.dependencies]
cairosvg = "^2.8.2"

